@@ -29,7 +29,7 @@ from crate.testing.layer import CrateLayer
 from .command import CrateCmd
 from .printer import ColorPrinter, PrintWrapper
 from .test_command import CommandTest, OutputWriterTest
-from .test_commands import ReadFileCommandTest
+from .test_commands import ReadFileCommandTest, ToggleAutocompleteCommandTest
 from .test_sysinfo import SysInfoTest
 from .test_repl import SQLCompleterTest
 
@@ -94,6 +94,7 @@ def test_suite():
     suite.addTest(unittest.makeSuite(OutputWriterTest))
     suite.addTest(unittest.makeSuite(SysInfoTest))
     suite.addTest(unittest.makeSuite(ReadFileCommandTest))
+    suite.addTest(unittest.makeSuite(ToggleAutocompleteCommandTest))
     suite.addTest(unittest.makeSuite(SQLCompleterTest))
 
     return suite
